--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -66,17 +66,21 @@
     <string name="about_translators_title">Oversættere</string>
     <string name="about_testers_title">Testere</string>
     <string name="about_source_title">Kildekode</string>
-    <string name="about_source">Dette projekt er hosted på GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Dette projekt er hosted på GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">App licens</string>
     <string name="about_app_license">Denne applikation er licenseret under GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Vis licens</string>
-    <string name="about_app_icon_disclaimer_title">App ikon</string>
-    <string name="about_app_icon_disclaimer"><p>Det original ikon er lavet af <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> fra <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ikoner</string>
-    <string name="about_icons_disclaimer"><p>Alle andre ikoner brugt i denne app er <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">Material Design ikoner</a> af Google Inc. licenseret under en Creative Commons Licens.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Det original ikon er lavet af %1$s&lt;/p>&lt;p>Alle andre ikoner brugt i denne app er &lt;a href="https://materialdesignicons.com/" title="Link to Website">Material Design ikoner&lt;/a> af Google Inc. licenseret under en Creative Commons Licens.&lt;/p></string>
     <string name="about_credits_tab_title">Credits</string>
     <string name="about_license_tab_title">Licens</string>
 
     <string name="widget_all_notes_title">Alle noter</string>
-    </resources>
+    
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d valgt</item>
+        <item quantity="other">%d selected</item>
+    </plurals>
+</resources>
