--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -67,26 +67,29 @@
 
     <!-- About -->
     <string name="about_version_title">Έκδοση</string>
-    <string name="about_version">Προς το παρόν χρησιμοποιείτε <strong>%1$s</strong></string>
+    <string name="about_version">Προς το παρόν χρησιμοποιείτε &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Συντηρητής</string>
     <string name="about_developers_title">Προγραμματιστές</string>
     <string name="about_translators_title">Μεταφραστές</string>
-    <string name="about_translators">pejakm (Σέρβικα), ageru (Γαλλικά (France)), proninyaroslav (Ρώσικα), mist (Τσέχικα)</string>
     <string name="about_testers_title">Δοκιμαστές</string>
     <string name="about_source_title">Πηγαίος κώδικας</string>
     <string name="about_issues_title">Θεματα</string>
     <string name="about_app_license_title">Άδεια χρήσης εφαρμογής</string>
     <string name="about_app_license">Αυτή η εφαρμογή υπόκεινται στην άδεια χρήσης GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Προβολή άδειας χρήσης</string>
-    <string name="about_app_icon_disclaimer_title">Εικονίδιο εφαρμογής</string>
-    <string name="about_app_icon_disclaimer"><p>Το αυθεντικό εικονίδιο κατασκευάστηκε από τον <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> από το <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Εικονίδια</string>
-    <string name="about_icons_disclaimer"><p>Όλα τα υπόλοιπα εικονίδια που χρησιμοποιούνται από αυτή την εφαρμογή είναι <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">Εικονίδια Υλικού Σχεδίασης</a> κατασκευασμένα από την Google Inc. και έχουν άδεια χρήσης: Creative Commons License.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Το αυθεντικό εικονίδιο κατασκευάστηκε από τον %1$s&lt;/p>&lt;p>Όλα τα υπόλοιπα εικονίδια που χρησιμοποιούνται από αυτή την εφαρμογή είναι &lt;a href="https://materialdesignicons.com/" title="Link to Website">Εικονίδια Υλικού Σχεδίασης&lt;/a> κατασκευασμένα από την Google Inc. και έχουν άδεια χρήσης: Creative Commons License.&lt;/p></string>
     <string name="about_credits_tab_title">Μνεία</string>
     <string name="about_contribution_tab_title">Συνεισφορά</string>
     <string name="about_license_tab_title">Άδεια χρήσης</string>
 
     <string name="widget_all_notes_title">Όλες οι σημειώσεις</string>
     <string name="widget_single_note_title">Απλή σημείωση</string>
+
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d επιλέχθηκε</item>
+        <item quantity="other">%d επιλέχθηκαν</item>
+    </plurals>
 </resources>
