--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -67,28 +67,31 @@
 
     <!-- About -->
     <string name="about_version_title">Versión</string>
-    <string name="about_version">Está usando ahora <strong>%1$s</strong></string>
+    <string name="about_version">Está usando ahora &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Mantenedor</string>
     <string name="about_developers_title">Desarrolladores</string>
     <string name="about_translators_title">Traductores</string>
-    <string name="about_translators">pejakm (serbio), ageru (Francés [Francia]), proninyaroslav (ruso), mist (checo)</string>
     <string name="about_testers_title">Testers</string>
     <string name="about_source_title">Código fuente</string>
-    <string name="about_source">Este proyecto se aloja en GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/nextcloud-notes/</a></string>
+    <string name="about_source">Este proyecto se aloja en GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_issues_title">Problemas</string>
-    <string name="about_issues">Puedes informar de errores, proponer mejoras y pedir características en el tracker de GitHub: <a href=\"https://github.com/stefan-niedermann/nextcloud-notes/issues\">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Puedes informar de errores, proponer mejoras y pedir características en el tracker de GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">Licencia de la aplicación</string>
     <string name="about_app_license">Esta aplicación está bajo la Licencia Pública General GNU v3+.</string>
     <string name="about_app_license_button">Ver licencia</string>
-    <string name="about_app_icon_disclaimer_title">Icono de la app</string>
-    <string name="about_app_icon_disclaimer"><p>Icono original por <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> en <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Iconos</string>
-    <string name="about_icons_disclaimer"><p>Todos los demás iconos usados por esta app son <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">iconos Material Design</a> hechos por Google Inc. y licenciados bajo una licencia Creative Commons.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Icono original por %1$s&lt;/p>&lt;p>Todos los demás iconos usados por esta app son &lt;a href="https://materialdesignicons.com/" title="Link to Website">iconos Material Design&lt;/a> hechos por Google Inc. y licenciados bajo una licencia Creative Commons.&lt;/p></string>
     <string name="about_credits_tab_title">Créditos</string>
     <string name="about_contribution_tab_title">Contribución</string>
     <string name="about_license_tab_title">Licencia</string>
 
     <string name="widget_all_notes_title">Todas las notas</string>
     <string name="widget_single_note_title">Nota única</string>
+
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d seleccionado</item>
+        <item quantity="other">%d seleccionados</item>
+    </plurals>
 </resources>
