--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -67,28 +67,31 @@
 
     <!-- About -->
     <string name="about_version_title">Version</string>
-    <string name="about_version">Vous utilisez actuellement la <strong>%1$s</strong></string>
+    <string name="about_version">Vous utilisez actuellement la &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Responsable</string>
     <string name="about_developers_title">Developpeurs</string>
     <string name="about_translators_title">Traducteurs</string>
-    <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian), mist (Czech)</string>
     <string name="about_testers_title">Testeurs</string>
     <string name="about_source_title">Code source</string>
-    <string name="about_source">Ce projet est hébergé sur GitHub : <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Ce projet est hébergé sur GitHub : &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_issues_title">Bugs</string>
-    <string name="about_issues">Vous pouvez signaler les bugs ainsi que vos propositions ou demandes d\'amélioration dans le gestionnaire de bugs de GitHub : <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Vous pouvez signaler les bugs ainsi que vos propositions ou demandes d\'amélioration dans le gestionnaire de bugs de GitHub : &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">Licence de l\'App</string>
     <string name="about_app_license">Cette application est licenciée selon les termes de la GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Voir la licence</string>
-    <string name="about_app_icon_disclaimer_title">Icône de l\'app</string>
-    <string name="about_app_icon_disclaimer"><p>Icône originale créée par <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> disponible <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="ownCloud Notes app icon on GitHub">sur GitHub</a>.</p></string>
     <string name="about_icons_disclaimer_title">Icônes</string>
-    <string name="about_icons_disclaimer"><p>Toutes les autres icônes utilisées par cette app sont des <a href="https://materialdesignicons.com/" title="Lien vers le site web">Material Design Icons</a> créées par Google Inc. et licenciées selon les termes de la Creative Commons License.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Icône originale créée par %1$s.&lt;/p>&lt;p>Toutes les autres icônes utilisées par cette app sont des &lt;a href="https://materialdesignicons.com/" title="Lien vers le site web">Material Design Icons&lt;/a> créées par Google Inc. et licenciées selon les termes de la Creative Commons License.&lt;/p></string>
     <string name="about_credits_tab_title">Crédits</string>
     <string name="about_contribution_tab_title">Contributions</string>
     <string name="about_license_tab_title">Licence</string>
 
     <string name="widget_all_notes_title">Toutes les notes</string>
     <string name="widget_single_note_title">Une seule note</string>
+
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d sélectionnée</item>
+        <item quantity="other">%d sélectionnées</item>
+    </plurals>
 </resources>
