--- a/app/src/main/res/values-hy/strings.xml
+++ b/app/src/main/res/values-hy/strings.xml
@@ -54,26 +54,29 @@
 
     <!-- About -->
     <string name="about_version_title">տարբերակ</string>
-    <string name="about_version">դուք օգտագործում եք <strong>%1$s</strong></string>
+    <string name="about_version">դուք օգտագործում եք &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">ղեկավար</string>
     <string name="about_developers_title">ծրագրավորող</string>
     <string name="about_translators_title">թարգմանիչ</string>
-    <string name="about_translators">Արթուր Դավթյան, ageru (Français (France)), proninyaroslav (Russian), mist (Czech)</string>
     <string name="about_testers_title">թեսթավորող</string>
     <string name="about_source_title">ծրագրի կոդը</string>
-    <string name="about_source">ծրագիրը տեղադրված է GitHub: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">ծրագիրը տեղադրված է GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_issues_title">հայց</string>
-    <string name="about_issues">բոլոր առաջարկները կարող եք ներկայացնել GitHub հայցեր բաժնում: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">բոլոր առաջարկները կարող եք ներկայացնել GitHub հայցեր բաժնում: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">ծրագրի լիցենզիան</string>
     <string name="about_app_license">տվյալ ծրագիրը լիցենզավորված է GNU GENERAL PUBLIC LICENSE v3+ կողմից.</string>
     <string name="about_app_license_button">տեսնել լիցենզիան </string>
-    <string name="about_app_icon_disclaimer_title">ծրագրի լոգոտիպը</string>
-    <string name="about_app_icon_disclaimer"><p>նախնական լոգոտիպը ստեղծված է<a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> մեջ <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">լոգոտիպներ</string>
-    <string name="about_icons_disclaimer"><p>բոլոր մյուս լոգոտիպերը, որոնք օգտագործվում են տվյալ ծրագրում լիցենզավորված են <a href="https://materialdesignicons.com/" title="Link to Website">Material Design լոգոտիպեր</a>  Creative Commons License կողմից.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>նախնական լոգոտիպը ստեղծված է%1$s&lt;/p>&lt;p>բոլոր մյուս լոգոտիպերը, որոնք օգտագործվում են տվյալ ծրագրում լիցենզավորված են &lt;a href="https://materialdesignicons.com/" title="Link to Website">Material Design լոգոտիպեր&lt;/a>  Creative Commons License կողմից.&lt;/p></string>
     <string name="about_credits_tab_title">անվանացանկ</string>
     <string name="about_contribution_tab_title">մասնակցել</string>
     <string name="about_license_tab_title">լիցենզիա</string>
 
-    </resources>
+    
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d ընտրված է</item>
+        <item quantity="other">%d ընտրված է</item>
+    </plurals>
+</resources>
