--- a/app/src/main/res/values-ia/strings.xml
+++ b/app/src/main/res/values-ia/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Plurals -->
     <plurals name="ab_selected">
         <item quantity="one">%d selectionate</item>
         <item quantity="other">%d selectionate</item>
