--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -64,23 +64,28 @@
 
     <!-- About -->
     <string name="about_version_title">Versija</string>
-    <string name="about_version">Jūs šobrīd izmantojat <strong>%1$s</strong></string>
+    <string name="about_version">Jūs šobrīd izmantojat &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Uzturētājs</string>
     <string name="about_developers_title">Izstrādātāji</string>
     <string name="about_translators_title">Tulkotāji</string>
-    <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian), mist (Czech)</string>
     <string name="about_testers_title">Testētāji</string>
     <string name="about_source_title">Izejas kods</string>
-    <string name="about_source">Šis projekts atrodas uz GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Šis projekts atrodas uz GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">Programmas licence</string>
     <string name="about_app_license">Šī lietojumprogramma tiek licencēta zem GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Skatīt licenci</string>
-    <string name="about_app_icon_disclaimer_title">Programmas ikona</string>
-    <string name="about_app_icon_disclaimer"><p>Orģinālās ikonas izveodojis <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> no <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ikonas</string>
     <string name="about_credits_tab_title">Kredīti</string>
     <string name="about_license_tab_title">Licence</string>
 
     <string name="widget_all_notes_title">Visas piezīmes</string>
     <string name="widget_single_note_title">Viena piezīme</string>
+
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="zero">%d atlasīts</item>
+        <item quantity="one">%d atlasīts</item>
+        <item quantity="other">%d atlasīts</item>
+    </plurals>
 </resources>
