--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -67,27 +67,30 @@
 
     <!-- About -->
     <string name="about_version_title">Versjon</string>
-    <string name="about_version">Du bruker <strong>%1$s</strong></string>
+    <string name="about_version">Du bruker &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Vedlikeholder</string>
     <string name="about_developers_title">Utvikler</string>
     <string name="about_translators_title">Oversetter</string>
-    <string name="about_translators">Sølve_Salvesen (norsk bokmål)</string>
     <string name="about_testers_title">Testere</string>
     <string name="about_source_title">Kildekode</string>
-    <string name="about_source">Dette prosjektet ligger på GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Dette prosjektet ligger på GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_issues_title">Feil</string>
-    <string name="about_issues">Du kan rapportere feil, forbedringforslag og funksjonønsker på GitHub saksporeren: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/issues\">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Du kan rapportere feil, forbedringforslag og funksjonønsker på GitHub saksporeren: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">Lisens</string>
     <string name="about_app_license">Dette programmet er lisensiert under GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Vis lisens</string>
-    <string name="about_app_icon_disclaimer_title">App ikon</string>
-    <string name="about_app_icon_disclaimer"><p>Orginalt ikon laget av <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> fra <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ikoner</string>
-    <string name="about_icons_disclaimer"><p>Alle andre ikoner brukt av denne app\'en er <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">Material Design Icons</a> laget av Google Inc. og lisensiert under Creative Commons License.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Orginalt ikon laget av %1$s&lt;/p>&lt;p>Alle andre ikoner brukt av denne app\'en er &lt;a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons&lt;/a> laget av Google Inc. og lisensiert under Creative Commons License.&lt;/p></string>
     <string name="about_contribution_tab_title">Bidragsytere</string>
     <string name="about_license_tab_title">Lisens</string>
 
     <string name="widget_all_notes_title">Alle notater</string>
     <string name="widget_single_note_title">Enkeltnotat</string>
+
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d valgt</item>
+        <item quantity="other">%d valgte</item>
+    </plurals>
 </resources>
