--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -67,28 +67,31 @@
 
     <!-- About -->
     <string name="about_version_title">Versie</string>
-    <string name="about_version">Je gebruikt nu <strong>%1$s</strong></string>
+    <string name="about_version">Je gebruikt nu &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Beheerder</string>
     <string name="about_developers_title">Ontwikkelaar</string>
     <string name="about_translators_title">Vertalers</string>
-    <string name="about_translators">pejakm (Servisch), ageru (Français (Frans)), proninyaroslav (Russisch), mist (Tsjechisch)</string>
     <string name="about_testers_title">Testers</string>
     <string name="about_source_title">Broncode</string>
-    <string name="about_source">Dit is een GitHub project: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Dit is een GitHub project: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_issues_title">Kwesties</string>
-    <string name="about_issues">Je kan een bug, wijzigingen of functie verzoek melden bij de GitHub issue tracker: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/issues\">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Je kan een bug, wijzigingen of functie verzoek melden bij de GitHub issue tracker: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">App licentie</string>
     <string name="about_app_license">Deze applicatie valt onder de GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Licentie weergeven</string>
-    <string name="about_app_icon_disclaimer_title">App pictogram</string>
-    <string name="about_app_icon_disclaimer"><p>Het originele pictogram is gemaakt door <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> van <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">pictogram</string>
-    <string name="about_icons_disclaimer"><p>Alle pictogram\'s gebruikt door deze app zijn <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">Materiaal ontwerp pictogram\'s</a> gemaakt door Google Inc. en vallen onder de Creatieve Content Licentie.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Het originele pictogram is gemaakt door %1$s&lt;/p>&lt;p>Alle pictogram\'s gebruikt door deze app zijn &lt;a href="https://materialdesignicons.com/" title="Link to Website">Materiaal ontwerp pictogram\'s&lt;/a> gemaakt door Google Inc. en vallen onder de Creatieve Content Licentie.&lt;/p></string>
     <string name="about_credits_tab_title">Credits</string>
     <string name="about_contribution_tab_title">Bijdrage</string>
     <string name="about_license_tab_title">Licentie</string>
 
     <string name="widget_all_notes_title">Alle notities</string>
     <string name="widget_single_note_title">Enkele notitie</string>
+
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d geselecteerd</item>
+        <item quantity="other">%d geselecteerd</item>
+    </plurals>
 </resources>
