--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -67,28 +67,32 @@
 
     <!-- About -->
     <string name="about_version_title">Wersja</string>
-    <string name="about_version">Aktualnie używasz <strong>%1$s</strong></string>
+    <string name="about_version">Aktualnie używasz &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Opiekun</string>
     <string name="about_developers_title">Deweloperzy</string>
     <string name="about_translators_title">Tłumacze</string>
-    <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian), mist (Czech)</string>
     <string name="about_testers_title">Testerzy</string>
     <string name="about_source_title">Kod źródłowy</string>
-    <string name="about_source">Ten projekt jest hostowany na GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Ten projekt jest hostowany na GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_issues_title">Problemy</string>
-    <string name="about_issues">Możesz zgłaszać błędy, propozycje rozbudowy lub prośby o nowe funkcjonalności na GitHubie: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/issues\">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Możesz zgłaszać błędy, propozycje rozbudowy lub prośby o nowe funkcjonalności na GitHubie: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">Licencja aplikacji</string>
     <string name="about_app_license">Aplikacja jest chroniona licencją GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Zobacz licencję</string>
-    <string name="about_app_icon_disclaimer_title">Ikona aplikacji</string>
-    <string name="about_app_icon_disclaimer"><p>Oryginalna ikona została wykonana przez <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jana C. Borchardta</a> z <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ikony</string>
-    <string name="about_icons_disclaimer"><p>Pozostałe ikony użyte w aplikacji są <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">Ikonami Material Design</a> wykonanymi przez Google Inc. i są chronione licencją Creative Commons License.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Oryginalna ikona została wykonana przez %1$s&lt;/p>&lt;p>Pozostałe ikony użyte w aplikacji są &lt;a href="https://materialdesignicons.com/" title="Link to Website">Ikonami Material Design&lt;/a> wykonanymi przez Google Inc. i są chronione licencją Creative Commons License.&lt;/p></string>
     <string name="about_credits_tab_title">O</string>
     <string name="about_contribution_tab_title">Wkład</string>
     <string name="about_license_tab_title">Licencja</string>
 
     <string name="widget_all_notes_title">Wszystkie notatki</string>
     <string name="widget_single_note_title">Pojedyncza notatka</string>
+
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d zaznaczone</item>
+        <item quantity="few">%d zaznaczonych</item>
+        <item quantity="other">%d zaznaczonych</item>
+    </plurals>
 </resources>
