--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -55,28 +55,31 @@
 
     <!-- About -->
     <string name="about_version_title">Versão</string>
-    <string name="about_version">Está atualmente a usar a versão <strong>%1$s</strong></string>
+    <string name="about_version">Está atualmente a usar a versão &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Mantenedor</string>
     <string name="about_developers_title">Desenvolvedores</string>
     <string name="about_translators_title">Tradutores</string>
-    <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian)</string>
     <string name="about_testers_title">Experimentadores</string>
     <string name="about_source_title">Código fonte</string>
-    <string name="about_source">Este projeto está alojado no GitHub: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Este projeto está alojado no GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_issues_title">Problemas</string>
-    <string name="about_issues">Pode reportar erros, propor melhorias e pedir funcionalidades no seguidor de problemas do GitHub: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Pode reportar erros, propor melhorias e pedir funcionalidades no seguidor de problemas do GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">Licença da aplicação</string>
     <string name="about_app_license">Esta aplicação está licenciada sob a licença GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Ver licença</string>
-    <string name="about_app_icon_disclaimer_title">Ícone da aplicação</string>
-    <string name="about_app_icon_disclaimer"><p>Ícone original criado por <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> de <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ícones</string>
-    <string name="about_icons_disclaimer"><p>Todos os restantes ícones usados por esta aplicação são <a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons</a> criados por Google Inc. e licenciados sob uma licença Creative Commons.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Ícone original criado por %1$s&lt;/p>&lt;p>Todos os restantes ícones usados por esta aplicação são &lt;a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons&lt;/a> criados por Google Inc. e licenciados sob uma licença Creative Commons.&lt;/p></string>
     <string name="about_credits_tab_title">Créditos</string>
     <string name="about_contribution_tab_title">Contribuição</string>
     <string name="about_license_tab_title">Licença</string>
 
     <string name="widget_all_notes_title">Todas as notas</string>
     <string name="widget_single_note_title">Nota única</string>
+
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d selecionado</item>
+        <item quantity="other">%d selecionados</item>
+    </plurals>
 </resources>
