--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -66,7 +66,7 @@
 
     <!-- About -->
     <string name="about_version_title">Verzia</string>
-    <string name="about_version">Momentálne používate <strong>%1$s</strong></string>
+    <string name="about_version">Momentálne používate &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Udržovateľ</string>
     <string name="about_developers_title">Vývojári</string>
     <string name="about_translators_title">Prekladatelia</string>
@@ -75,7 +75,6 @@
     <string name="about_issues_title">Problémy</string>
     <string name="about_app_license_title">Licencia aplikácie</string>
     <string name="about_app_license_button">Zobraziť licenciu</string>
-    <string name="about_app_icon_disclaimer_title">Ikona aplikácie</string>
     <string name="about_icons_disclaimer_title">Ikony</string>
     <string name="about_contribution_tab_title">Príspevok</string>
     <string name="about_license_tab_title">Licencia</string>
