--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -67,28 +67,31 @@
 
     <!-- About -->
     <string name="about_version_title">Versioni</string>
-    <string name="about_version">Për momentin ju po përdorni <strong>%1$s</strong></string>
+    <string name="about_version">Për momentin ju po përdorni &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Mirëmbajtësi</string>
     <string name="about_developers_title">Zhvilluesit</string>
     <string name="about_translators_title">Përkthyesit</string>
-    <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian), mist (Czech)</string>
     <string name="about_testers_title">Testuesit</string>
     <string name="about_source_title">Kodi burim</string>
-    <string name="about_source">Ky projekt ruhet në GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/\">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Ky projekt ruhet në GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_issues_title">Çështjet</string>
-    <string name="about_issues">Ju mund të raportoni buge, përmirësoni propozimet dhe të paraqisni propozime në gjurmuesin e çështjeve të GitHub: <a href=\"https://github.com/stefan-niedermann/OwnCloud-Notes/issues\">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Ju mund të raportoni buge, përmirësoni propozimet dhe të paraqisni propozime në gjurmuesin e çështjeve të GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">Liçensa e aplikacionit</string>
     <string name="about_app_license">Ky aplikacion është liçensuar nën GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Trego liçensën</string>
-    <string name="about_app_icon_disclaimer_title">Ikona e aplikacionit</string>
-    <string name="about_app_icon_disclaimer"><p>Ikona origjinale u bë nga <a href=\"http://jancborchardt.net/\" title=\"Jan C. Borchardt\">Jan C. Borchardt</a> nga <a href=\"https://github.com/owncloud/notes/commits/master/img/notes.svg\" title=\"GitHub\">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ikonat</string>
-    <string name="about_icons_disclaimer"><p>Të gjitha ikonat vijuese të përdorura nga ky aplikacion janë <a href=\"https://materialdesignicons.com/\" title=\"Link to Website\">Ikona Material Design </a> të bëra nga Google Inc. dhe të liçensuara nën Liçensën Creative Commons.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Ikona origjinale u bë nga %1$s&lt;/p>&lt;p>Të gjitha ikonat vijuese të përdorura nga ky aplikacion janë &lt;a href="https://materialdesignicons.com/" title="Link to Website">Ikona Material Design &lt;/a> të bëra nga Google Inc. dhe të liçensuara nën Liçensën Creative Commons.&lt;/p></string>
     <string name="about_credits_tab_title">Kreditet</string>
     <string name="about_contribution_tab_title">Kontributi</string>
     <string name="about_license_tab_title">Liçensë</string>
 
     <string name="widget_all_notes_title">Të gjitha shënimet</string>
     <string name="widget_single_note_title">Një shënim i vetëm</string>
+
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d të përzgjedhura</item>
+        <item quantity="other">%d të përzgjedhura</item>
+    </plurals>
 </resources>
